Fixed two typos in HCl_DCl_template.ipynb.

--- a/HCl_DCl_template.ipynb
+++ b/HCl_DCl_template.ipynb
@@ -322,11 +322,11 @@
     "# Extract peak locations from HCl spectra\n",
     "from scipy.signal import find_peaks, peak_prominences\n",
     "peaks_hcl, _ = find_peaks(hcl_spectrum['Absorbance'],\n",
-    "                     prominence=0.005 , # Start with .01, adjust from there\n",
-    "                     height=0.025)  # Start just above the baseline of your spectrum\n",
+    "                     prominence= , # Start with .01, adjust from there\n",
+    "                     height= )  # Start just above the baseline of your spectrum\n",
     "print(len(peaks_hcl)) # Tells us how many total peaks were found\n",
     "\n",
-    "                          \n",
+    "\n",
     "# We'll plot the spectrum along with the peaks we found. Note the steps\n",
     "# in the peaks list. We know that there are two isotopes and that they \n",
     "# should be every other peak, so we step by 2. List slicing (or stepping)\n",
@@ -334,11 +334,11 @@
     "# points to get a good group. Try to get the same pairs for your peaks so \n",
     "# your lists are the same length. \n",
     "plt.plot(hcl_spectrum.index, hcl_spectrum['Absorbance'])\n",
-    "plt.scatter(hcl_spectrum.iloc[peaks_hcl[0::2]], # Select the even peaks\n",
+    "plt.plot(hcl_spectrum.iloc[peaks_hcl[0:-1:2]], # Select the even peaks\n",
     "         marker='.', \n",
     "         color='red',\n",
     "         linewidth=0)\n",
-    "plt.plot(hcl_spectrum.iloc[peaks_hcl[1::2]], # Select the odd peaks\n",
+    "plt.plot(hcl_spectrum.iloc[peaks_hcl[1:-1:2]], # Select the odd peaks\n",
     "         marker='.', \n",
     "         color='orange',\n",
     "         linewidth=0)\n",
