Fixed some typos, moved hcl_con_dict definition to import section.

--- a/HCl_DCl_template.ipynb
+++ b/HCl_DCl_template.ipynb
@@ -154,6 +154,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We want to make a dictionary in which to store all of our constants that are calculated later in the lab. For now, we'll just create the dictionary with a header row. Later, as we calculate the constants for each molecule, we will add in keys (rows) with a corresponding list of constants."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dictionary with the molecule as the key and the variables as a list of values\n",
+    "hcl_con_dict = {'Constants': ['nu_0', 'B_e', 'A_e', 'D_e', 'nu_e', 'k', ...]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Import the files from your bond length scans. If you name them in a reasonable manner, you can use the loop below to automatically import all three of them and combine them into a single dictionary object. "
    ]
   },
@@ -242,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, you should plot and analyze the results of your bond-length scan from Gaussian. In the discussion section, show a plot of your results. Also show (preferrably overlaid) a plot of a Morse potential and a harmonic potential for this molecule. Use the equilibrium bond length from your optimization calculations for HCl as the input for $r_0$. "
+    "In this section, you should plot and analyze the results of your bond-length scan from Gaussian. In the discussion section, show a plot of your results. Also show (preferably overlaid) a plot of a Morse potential and a harmonic potential for this molecule. Use the equilibrium bond length from your optimization calculations for HCl as the input for $r_0$. "
    ]
   },
   {
@@ -386,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print differenc between peaks scaled by difference in m values\n",
+    "# Print difference between peaks scaled by difference in m values\n",
     "print('Mean values:\\n',hcl_peak_data[['H35Cl','H37Cl']].diff().div(hcl_peak_data['m'].diff(), axis=0).mean())\n",
     "hcl_peak_data[['H35Cl','H37Cl']].diff().div(hcl_peak_data.m.diff(), axis=0)"
    ]
@@ -464,16 +481,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary with the molecle as the key and the variables as a list of values\n",
-    "hcl_con_dict = {'Constants': ['nu_0', 'B_e', 'A_e', 'D_e', 'nu_e', 'k', ...]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Calculate values for \\nu_e, \\nu_e\\chi_e, k (force constant)\n",
     "\n",
     "# Convert coefficients to a list of values, then add your new values to the list\n",
@@ -529,7 +536,7 @@
     "hcl_constants.set_index('Constants')\n",
     "```\n",
     "\n",
-    "This will make a new DataFrame called `hcl_constants` where the names of the constants are the index for the table. The `columns=` entry will allow you to order the columns any way you want by typing in the list of column names (as quoted strigs). You can print it out by typing `hcl_constants` in an emtpy code cell and executing that alone. "
+    "This will make a new DataFrame called `hcl_constants` where the names of the constants are the index for the table. The `columns=` entry will allow you to order the columns any way you want by typing in the list of column names (as quoted strings). You can print it out by typing `hcl_constants` in an empty code cell and executing that alone. "
    ]
   },
   {
@@ -543,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, you should be able to complete any additonal calculations requested in the lab manual on your own. "
+    "At this point, you should be able to complete any additional calculations requested in the lab manual on your own. "
    ]
   },
   {
@@ -561,7 +568,7 @@
     "\n",
     "If you have trouble with the Python code, it's worth having a look at the documentation. Each of the packages used has a wealth of documentation ([NumPy][np], [SciPy][sp], [Matplotlib][mpl], [Pandas][pd]), and [StackExchange][http://www.stackexchange.com/] has a wealth of knowledge (answers are often in the top of search results for a given topic). If you're still having problems, feel free to ask your classmates in the Teams channel for the lab (text or voice/screensharing). I'm also happy to try to help, but you'll be at the mercy of my schedule, which might be hectic for the next week or so. \n",
     "\n",
-    "Before turning this lab in (Export to PDF and email to me), please clean up the notebook. Feel free to delete any cells that seem unnecesary (such as this one). "
+    "Before turning this lab in (Export to PDF and email to me), please clean up the notebook. Feel free to delete any cells that seem unnecessary (such as this one). "
    ]
   },
   {
