Removed scanparm -> bondcoord monkeypatch because cclib has been fixed in v1.6.3.

--- a/HCl_DCl_template.ipynb
+++ b/HCl_DCl_template.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Begin by running Gaussian scans on the bond length using the template file `gaussian_calcs/bond_scans/hcl_bond-template.com`. Look at the structure of the file, duplicate it, then run three calculations using the following methods (replace `<method>` in the template input file):\n",
+    "Begin by running Gaussian scans on the bond length using the template file `gaussian_calcs/bond_scans/hcl_bond-template.log`. Look at the structure of the file, duplicate it, then run three calculations using the following methods (replace `<method>` in the template input file):\n",
     "\n",
     "|       Method Type         | Gaussian Keyword |\n",
     "| :-----------------------  | :--------------  |\n",
@@ -186,15 +186,11 @@
     "\n",
     "# If your names are reasonable, you should be able to capture your method \n",
     "# name with the `*` character below. Example would be \n",
-    "# `scan-UHF.com`, `scan-PBE.com`, `scan-CCSDT.com`\n",
+    "# `scan-UHF.log`, `scan-PBE.log`, `scan-CCSDT.log`\n",
     "for name in glob.glob('gaussian_calcs/bond_scans/scan-*.log'):\n",
     "    # Create a reference name based on your filename\n",
     "    logname = name.split(sep='-')[1].split(sep='.')[0]\n",
     "    hcl_pes[logname] = cclib.io.ccread(name)\n",
-    "    \n",
-    "    # Need to turn map objects in scanparm into ints/floats because cclib doesn't\n",
-    "    # Will also use this as the index in our DataFrame\n",
-    "    hcl_pes[logname].bondcoords = np.array(list(map(list,hcl_pes[logname].scanparm)))[:,0]"
    ]
   },
   {
@@ -281,7 +277,7 @@
     "\n",
     "for method, data in hcl_pes.items():\n",
     "    methods.append(method)\n",
-    "    plt.plot(data.bondcoords, data.scanenergies)\n",
+    "    plt.plot(data.scanparm[0], data.scanenergies)\n",
     "plt.legend(methods)\n",
     "plt.xlabel('Bond Length (Å)')\n",
     "plt.ylabel('Energy (Ha)')\n",
@@ -470,37 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now is the time to calculate all of the constants from the lab manual. You can call the fit parameters from the previous cell the same way they're called in the legend block (`coeff[n]`). You'll need to use these values to calculate the other values ($ \\nu_e, \\nu_e\\chi_e, k $). I suggest storing them in a dictionary (`dict()` or `{}`) so that you can append the values for each successive molecule using the syntax shown in the final line of the second cell (A dictionary for this purpose has been initialized in the cell immediately following this one). \n",
-    "\n",
-    "You'll need to calculate all of the constants listed in the lab manual, then extend your coefficient list with those values (line 7 in the second cell below). Then you need to add this list of values to the dictionary with a new key (a molecule identifier works well). "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate values for \\nu_e, \\nu_e\\chi_e, k (force constant)\n",
-    "\n",
-    "# Convert coefficients to a list of values, then add your new values to the list\n",
-    "# h35cl_vals will be used to create an entry (row) in your dictionary of constants\n",
-    "h35cl_vals = h35cl_coeffs.tolist()\n",
-    "h35cl_vals.extend([\n",
-    "    #Insert list of values or variables for nu_e, k, etc.\n",
-    "])\n",
-    "\n",
-    "# Add an entry to the dictionary for your first molecule. \n",
-    "# This creates a new key ('H35Cl') and assigns h35cl_vals to that key. \n",
-    "# Make sure you keep the order you assigned above\n",
-    "hcl_con_dict['H35Cl'] =  h35cl_vals"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now repeat these steps (curve fitting, variable calculation) on H<sup>37</sup>Cl and add those variables to the dictionary (as shown in the final line of the last cell). "
+    "Now repeat these steps on H<sup>37</sup>Cl. "
    ]
   },
   {
@@ -521,6 +487,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Calculation of molecular constants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now is the time to calculate all of the constants from the lab manual. You can call the fit parameters from the previous cell the same way they're called in the legend block (`coeff[n]`). You'll need to use these values to calculate the other values ($ \\nu_e, \\nu_e\\chi_e, k $). I suggest storing them in a dictionary (`dict()` or `{}`) so that you can append the values for each successive molecule using the syntax shown in the final line of the cell.\n",
+    "\n",
+    "You'll need to calculate all of the constants listed in the lab manual, then extend your coefficient list with those values (line 7 in the second cell below). Then you need to add this list of values to the dictionary (created in the'Import' section) with a new key (a molecule identifier works well). If you don't think you can calculate a value for a particular constant (should be two values per molecule), set it equal to `np.nan`. This makes sure that there is an entry in your data table, even if it's just an \"empty\" cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate values for \\nu_e, \\nu_e\\chi_e, k (force constant)\n",
+    "\n",
+    "# Convert coefficients to a list of values, then add your new values to the list\n",
+    "# h35cl_vals will be used to create an entry (row) in your dictionary of constants\n",
+    "h35cl_vals = h35cl_coeff.tolist()\n",
+    "h35cl_vals.extend([\n",
+    "    #Insert list of values or variables for nu_e, k, etc.\n",
+    "])\n",
+    "\n",
+    "# Add an entry to the dictionary for your first molecule. \n",
+    "# This creates a new key ('H35Cl') and assigns h35cl_vals to that key. \n",
+    "# Make sure you keep the order you assigned above\n",
+    "hcl_con_dict['H35Cl'] =  h35cl_vals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should repeat this process for your theoretical molecules (all four of them), assigning the variables in the same order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Comparison of Experimental and Computational Constants"
    ]
   },
@@ -532,11 +542,11 @@
     "\n",
     "```python\n",
     "hcl_constants = pd.DataFrame(hcl_con_dict,\n",
-    "                            columns=['col2', 'col5', 'col3', 'col1', 'col4'])\n",
+    "                            columns=['Constants', 'col2', 'col5', 'col3', 'col1', 'col4'])\n",
     "hcl_constants.set_index('Constants')\n",
     "```\n",
     "\n",
-    "This will make a new DataFrame called `hcl_constants` where the names of the constants are the index for the table. The `columns=` entry will allow you to order the columns any way you want by typing in the list of column names (as quoted strings). You can print it out by typing `hcl_constants` in an empty code cell and executing that alone. "
+    "This will make a new DataFrame called `hcl_constants` where the names of the constants are the index for the table. The `columns=` entry will allow you to order the columns any way you want by typing in the list of column names (as quoted strings). I suggest this so that you can arrange each experimental column next to its theoretical counterpart for easier comparison. You can print it out by typing `hcl_constants` in an empty code cell and executing that alone. "
    ]
   },
   {
@@ -598,7 +608,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
+  },
+  "nteract": {
+   "version": "0.22.4"
   }
  },
  "nbformat": 4,
