Removed extra comma that left invalid JSON in ipynb template.

--- a/HCl_DCl_template.ipynb
+++ b/HCl_DCl_template.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Begin by running Gaussian scans on the bond length using the template file `gaussian_calcs/bond_scans/hcl_bond-template.log`. Look at the structure of the file, duplicate it, then run three calculations using the following methods (replace `<method>` in the template input file):\n",
+    "Begin by running Gaussian scans on the bond length using the template file `gaussian_calcs/bond_scans/hcl_bond-template.com`. Look at the structure of the file, duplicate it, then run three calculations using the following methods (replace `<method>` in the template input file):\n",
     "\n",
     "|       Method Type         | Gaussian Keyword |\n",
     "| :-----------------------  | :--------------  |\n",
@@ -190,7 +190,7 @@
     "for name in glob.glob('gaussian_calcs/bond_scans/scan-*.log'):\n",
     "    # Create a reference name based on your filename\n",
     "    logname = name.split(sep='-')[1].split(sep='.')[0]\n",
-    "    hcl_pes[logname] = cclib.io.ccread(name)\n",
+    "    hcl_pes[logname] = cclib.io.ccread(name)\n"
    ]
   },
   {
