Remove scratch folder, switch from REMP2 to OMP2

--- a/HCl_DCl_template.ipynb
+++ b/HCl_DCl_template.ipynb
@@ -119,9 +119,6 @@
     "\n",
     "# Psi4 library\n",
     "import psi4\n",
-    "# Set scratch directory to scratch partition\n",
-    "psi4_io = psi4.core.IOManager.shared_object()\n",
-    "psi4_io.set_default_path('/scratch-data2/jupyter/')\n",
     "for x in Path().glob(\"psi.*.clean\"): x.unlink() \n",
     "\n",
     "psi4.core.be_quiet()"
@@ -232,7 +229,7 @@
     "|  Method Type    | Psi4 Keyword |\n",
     "| :-------------  | :----------- |\n",
     "| Hartree-Fock    |  `HF`        |\n",
-    "| Hybrid PT       |  `REMP2`     |\n",
+    "| Hybrid PT       |  `OMP2`     |\n",
     "| DFT             |  `PBE0`      |"
    ]
   },
