Update template file with new plot styles.

--- a/HCl_DCl_template.ipynb
+++ b/HCl_DCl_template.ipynb
@@ -95,13 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-16T14:44:50.874881Z",
-     "start_time": "2019-06-16T14:44:38.616867Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Directory searching\n",
@@ -112,9 +106,12 @@
     "import scipy as sp\n",
     "\n",
     "# Visualizations\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.style.use('seaborn-v0_8-ticks')\n",
+    "plt.style.use('seaborn-v0_8-notebook')\n",
+    "mpl.rcParams['axes.spines.right'] = False\n",
+    "mpl.rcParams['axes.spines.top'] = False\n",
     "from tabulate import tabulate\n",
     "\n",
     "# Psi4 library\n",
@@ -155,7 +152,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +168,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +194,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +228,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -265,16 +257,13 @@
     "    print(r, e)\n",
     "    energies.append(e)\n",
     "    \n",
-    "psi4.diatomic.anharmonicity(r_vals, energies, plot_fit=f'outputs/{string}_plot.png')\n",
+    "psi4.diatomic.anharmonicity(r_vals, energies, mol=h35cl)\n",
     ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add your anharmonicity code below and save the output dictionaries for each. \n"
@@ -302,7 +291,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +339,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +367,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +392,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +415,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +482,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
